src/test/ui/borrowck/borrowck-return.stderr
error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-return.rs:13:12
   |
LL |     return x; //~ ERROR use of possibly uninitialized variable: `x`
   |            ^ use of possibly uninitialized `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
